fixed spacing

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ h1 {
     font-size: 26px;
     font-weight: 500;
     line-height: 26px;
+    padding-left: 1%;
 }
 
 h2 {
@@ -25,6 +26,7 @@ p {
     font-size: 15px;
     font-weight: 400;
     line-height: 20px;
+    padding-left: 1%;
 }
 
 .blockquote {
